--- a/map.html
+++ b/map.html
@@ -1,24 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title>World-Voxel Map</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-	<style>html,body{margin:0;height:100%;overflow:hidden}</style>
+  <meta charset="utf-8" />
+  <title>Redirecting to ChatGPT-style Interface...</title>
+  <script>
+    // Redirect to the new ChatGPT-style interface
+    window.location.href = '/';
+  </script>
 </head>
 <body>
-	<!-- HUD / inputs (copy the snippet in MapUI comment) -->
-	<div id="hud">
-		<input id="google-api-key" placeholder="Google API Key">
-		<input id="lat-lng" value="37.7749,-122.4194">
-		<input id="sse" type="number" value="20" style="width:60px">
-		<button id="fetch">Fetch</button>
-		<button id="download">Combine GLB</button>
-		<pre id="fetch-log"></pre>
-	</div>
-	<div id="map"></div>
+  <p>Redirecting to the new ChatGPT-style interface...</p>
+</body>
+</html>
 
-	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-	<script type="module" src="/src/map.js"></script>
+  <!-- Top search bar -->
+  <header class="pointer-events-none fixed top-4 left-0 right-0 flex flex-col items-center gap-2 z-40">
+    <div class="pointer-events-auto glass elev-3 rounded-full px-3 py-2.5 flex items-center gap-2 w-[min(720px,92vw)]">
+      <span class="material-symbols-rounded opacity-80">search</span>
+      <input id="place-search"
+             class="flex-1 bg-transparent outline-none ghost-input text-[15px]"
+             placeholder="Search places (e.g., Eiffel Tower)" />
+      <button id="open-settings" class="rounded-full hover:bg-white/5 px-2.5 py-2" title="API key">
+        <span class="material-symbols-rounded">key</span>
+      </button>
+    </div>
+
+    <!-- Recommended quick picks -->
+    <div id="quick-picks" class="pointer-events-auto flex flex-wrap justify-center gap-2 w-[min(720px,92vw)]"></div>
+  </header>
+
+  <!-- Search results dropdown -->
+  <div id="search-results" class="hidden fixed top-[60px] left-1/2 -translate-x-1/2 w-[min(720px,92vw)] z-50">
+    <div class="glass rounded-2xl elev-3 overflow-hidden divide-y divide-white/5"></div>
+  </div>
+
+  <!-- Controls card (smaller + lower, left) -->
+  <aside class="fixed top-[120px] left-4 z-30 w-[260px]">
+    <div class="glass rounded-2xl elev-3 p-4 space-y-4">
+      <div class="flex items-center justify-between">
+        <div class="text-sm font-medium opacity-80">Voxels</div>
+        <label class="inline-flex items-center cursor-pointer">
+          <input id="toggle-vox" type="checkbox" class="sr-only peer">
+          <div class="w-11 h-6 bg-white/10 rounded-full relative transition peer-checked:bg-white/30">
+            <div class="absolute top-0.5 left-0.5 w-5 h-5 bg-white rounded-full transition peer-checked:translate-x-5"></div>
+          </div>
+        </label>
+      </div>
+
+      <div class="flex items-center justify-between opacity-90">
+        <div class="text-sm">Minecraft textures</div>
+        <label class="inline-flex items-center cursor-pointer">
+          <input id="toggle-mc" type="checkbox" class="sr-only peer" disabled>
+          <div class="w-11 h-6 bg-white/10 rounded-full relative transition peer-checked:bg-white/30">
+            <div class="absolute top-0.5 left-0.5 w-5 h-5 bg-white rounded-full transition peer-checked:translate-x-5"></div>
+          </div>
+        </label>
+      </div>
+
+      <div class="space-y-2">
+        <div class="text-sm font-medium opacity-80">Voxel resolution</div>
+        <div class="grid grid-cols-4 gap-1 bg-white/5 rounded-xl p-1">
+          <button class="res-pill rounded-lg py-1.5 text-sm opacity-80 hover:bg-white/10" data-res="32">Low</button>
+          <button class="res-pill rounded-lg py-1.5 text-sm opacity-80 hover:bg-white/10" data-res="64">Med</button>
+          <button class="res-pill rounded-lg py-1.5 text-sm opacity-80 hover:bg-white/10" data-res="128">High</button>
+          <button class="res-pill rounded-lg py-1.5 text-sm opacity-80 hover:bg-white/10" data-res="256">Ultra</button>
+        </div>
+        <input id="res-fine" type="range" min="8" max="512" value="64" class="w-full accent-white/80">
+        <div class="text-xs opacity-60 -mt-1">Drag for fine-tune</div>
+      </div>
+    </div>
+  </aside>
+
+  <!-- Status chip (bottom-right) -->
+  <div id="status-chip"
+       class="fixed right-4 bottom-4 glass rounded-full elev-3 px-3 py-1.5 text-xs opacity-80">
+    Ready
+  </div>
+
+  <!-- Settings drawer -->
+  <div id="settings" class="hidden fixed top-[120px] right-4 z-30 w-[360px]">
+    <div class="glass rounded-2xl elev-3 p-4 space-y-3">
+      <div class="flex items-center gap-2 text-sm font-semibold opacity-90">
+        <span class="material-symbols-rounded">key</span> API Settings
+      </div>
+      <label class="text-xs opacity-70">Google Photoreal Tiles API Key</label>
+      <input id="google-api-key" class="w-full rounded-xl bg-white/10 px-3 py-2 outline-none"
+             placeholder="Paste your Google API key"/>
+      <div class="flex gap-2">
+        <button id="save-settings" class="rounded-xl bg-white/10 hover:bg-white/20 px-3 py-2 text-sm">Save</button>
+        <button id="close-settings" class="rounded-xl bg-white/10 hover:bg-white/20 px-3 py-2 text-sm">Close</button>
+      </div>
+      <div class="text-[11px] opacity-60 leading-4">Stored locally in this browser.</div>
+    </div>
+  </div>
+
+  <!-- Hidden compatibility elements expected by map.js -->
+  <input id="lat-lng" type="hidden" value="37.7749,-122.4194">
+  <input id="sse" type="hidden" value="20">
+  <button id="fetch" class="hidden"></button>
+  <pre id="fetch-log" class="hidden"></pre>
+  <button id="download" class="hidden"></button>
+
+  <script type="module" src="/src/map.js"></script>
 </body>
 </html>
