--- a/index.html
+++ b/index.html
@@ -133,6 +133,45 @@
     Ready
   </div>
 
+  <!-- Camera Controls Panel (top right) -->
+  <div id="camera-controls" class="fixed top-4 right-4 z-40 space-y-1">
+    <!-- Camera Mode Toggle -->
+    <div class="glass elev rounded-lg p-1">
+      <button id="camera-mode-btn" class="w-8 h-8 rounded flex items-center justify-center hover:bg-white/10 transition-colors" title="Switch Camera Mode">
+        <span class="material-symbols-rounded text-sm">360</span>
+      </button>
+    </div>
+
+    <!-- Compass -->
+    <div class="glass elev rounded-lg p-1">
+      <button id="compass-btn" class="w-8 h-8 rounded flex items-center justify-center hover:bg-white/10 transition-colors relative" title="Reset to North">
+        <span id="compass-needle" class="material-symbols-rounded text-sm transition-transform duration-300" style="transform: rotate(0deg)">north</span>
+      </button>
+    </div>
+
+    <!-- Zoom Controls -->
+    <div class="glass elev rounded-lg p-1 space-y-px">
+      <button id="zoom-in-btn" class="w-8 h-6 rounded flex items-center justify-center hover:bg-white/10 transition-colors" title="Zoom In">
+        <span class="material-symbols-rounded text-xs">add</span>
+      </button>
+      <div class="h-px bg-white/10"></div>
+      <button id="zoom-out-btn" class="w-8 h-6 rounded flex items-center justify-center hover:bg-white/10 transition-colors" title="Zoom Out">
+        <span class="material-symbols-rounded text-xs">remove</span>
+      </button>
+    </div>
+
+    <!-- Tilt Controls -->
+    <div class="glass elev rounded-lg p-1 space-y-px">
+      <button id="tilt-up-btn" class="w-8 h-6 rounded flex items-center justify-center hover:bg-white/10 transition-colors" title="Tilt Up">
+        <span class="material-symbols-rounded text-xs">keyboard_arrow_up</span>
+      </button>
+      <div class="h-px bg-white/10"></div>
+      <button id="tilt-down-btn" class="w-8 h-6 rounded flex items-center justify-center hover:bg-white/10 transition-colors" title="Tilt Down">
+        <span class="material-symbols-rounded text-xs">keyboard_arrow_down</span>
+      </button>
+    </div>
+  </div>
+
   <!-- Hidden compat fields expected by map.js -->
   <input id="lat-lng" type="hidden" value="37.7749,-122.4194">
   <input id="sse" type="hidden" value="20">
