--- a/map.html
+++ b/map.html
@@ -57,6 +57,16 @@
         </label>
       </div>
 
+      <div id="debug-imagery-row" class="flex items-center justify-between opacity-90" style="display: none;">
+        <div class="text-sm">Debug imagery</div>
+        <label class="inline-flex items-center cursor-pointer">
+          <input id="toggle-debug-imagery" type="checkbox" class="sr-only peer">
+          <div class="w-11 h-6 bg-white/10 rounded-full relative transition peer-checked:bg-white/30">
+            <div class="absolute top-0.5 left-0.5 w-5 h-5 bg-white rounded-full transition peer-checked:translate-x-5"></div>
+          </div>
+        </label>
+      </div>
+
       <div class="space-y-2">
         <div class="text-sm font-medium opacity-80">Voxel resolution</div>
         <div class="grid grid-cols-4 gap-1 bg-white/5 rounded-xl p-1">
